--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Inspeckage</string>
+    <string name="app_name">Inspeckage X</string>
 
 
     <string name="action_close">Close</string>
